# veritas

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml
data/self_learning/: mining_offsets.json  offsets.json  verified_facts.jsonl
src/: __init__.py  config.py
src/agents/: __init__.py  extraction.py  extraction_v2.py  prompts.py  prompts_v2.py
src/api/: factcheck_router.py  graph_router.py  intelligence_router.py  learning_router.py  main.py  veritas_router.py
src/data/: __init__.py  myths_database.py
src/datasources/: __init__.py  authority.py  authority_client.py  external.py
src/db/: __init__.py  graph_db.py
src/llm/: __init__.py  client.py
src/ml/: __init__.py  authoritative_verifier.py  auto_learn.py  confidence.py  fact_checker.py  ml_init.py  propaganda_detector.py  self_improver.py  veritas_confidence.py
src/models/: __init__.py  schema.py  veritas_schema.py
src/processing/: __init__.py  batch.py
src/services/: __init__.py  neo4j_graph_service.py  output_formatter.py  veritas_analyzer.py  veritas_prompts.py
src/ui/: streamlit_app.py  veritas_app.py
src/validation/: __init__.py  validator.py
tests/: test_extensions.py  test_schema.py
